# ChangeLog for media-sound/musicman
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/ChangeLog,v 1.13 2005/08/30 14:13:39 flameeyes Exp $

*musicman-0.15 (30 Aug 2005)

  30 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> +musicman-0.15.ebuild:
  Updated to latest upstream version.

*musicman-0.14 (04 Aug 2005)

  04 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> +musicman-0.14.ebuild:
  Added last upstream version.

  04 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  musicman-0.11-r1.ebuild:
  Cleaned up dependencies.

  18 Jan 2005; Gregorio Guidi <greg_g@gentoo.org> musicman-0.11-r1.ebuild:
  Added missing call to need-kde().

  15 Jan 2005; Dan Armak <danarmak@gentoo.org> musicman-0.11-r1.ebuild:
  Changed dep on kdebase to accept kdebase-meta, the split 'meta' package.
  This dep will be narrowed down in the future to the precise split packages
  required.

  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicman-0.11-r1.ebuild:
  Stable sparc.

  29 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicman-0.11-r1.ebuild, -musicman-0.11.ebuild:
  Changing fam depend to virtual.

  23 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicman-0.11-r1.ebuild:
  Added to ~sparc.

  03 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicman-0.11-r1.ebuild:
  Stable amd64, x86.

*musicman-0.11-r1 (17 Jul 2004)

  17 Jul 2004; David Holm <dholm@gentoo.org> musicman-0.11-r1.ebuild:
  Added to ~ppc.

  08 Jul 2004; Frank van de Pol <fvdpol@gentoo.org> :
  Added amd64 and gcc34 patches.

  07 Jul 2004; Frank van de Pol <fvdpol@gentoo.org> :
  New ebuild submitted by Daniel Rendall <gentoo@danielrendall.co.uk>. Closes
  bug #50479.
