@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/musicman-0.11-r1.ebuild,v 1.9 2005/08/04 14:54:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/musicman-0.11-r1.ebuild,v 1.10 2005/10/30 22:36:08 flameeyes Exp $
 
 IUSE=""
 
@@ -20,6 +20,13 @@ DEPEND="|| ( kde-base/libkonq >=kde-base/kdebase-3.2.1 )"
 
 need-kde 3.2
 
+pkg_setup() {
+	if ! useq arts; then
+		eerror "${PN} needs the USE=\"arts\" enabled and also the kdelibs compiled with the USE=\"arts\" enabled"
+		die
+	fi
+}
+
 src_unpack() {
 	unpack ${A}
 	cd ${S}
@@ -27,3 +34,4 @@ src_unpack() {
 	epatch ${FILESDIR}/${P}-gcc34.patch
 	epatch ${FILESDIR}/${P}-amd64.patch
 }
+
