@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/musicman-0.15.ebuild,v 1.1 2005/08/30 14:13:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/musicman-0.15.ebuild,v 1.2 2005/10/30 22:36:08 flameeyes Exp $
 
 IUSE=""
 
@@ -19,6 +19,13 @@ KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 DEPEND="|| ( kde-base/libkonq >=kde-base/kdebase-3.2.1 )"
 
 need-kde 3.2
+
+pkg_setup() {
+	if ! useq arts; then
+		eerror "${PN} needs the USE=\"arts\" enabled and also the kdelibs compiled with the USE=\"arts\" enabled"
+		die
+	fi
+}
 
 src_unpack() {
 	kde_src_unpack
