@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/musicman
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/ChangeLog,v 1.13 2005/08/30 14:13:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/musicman/ChangeLog,v 1.14 2005/10/30 22:36:08 flameeyes Exp $
+
+  30 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
+  musicman-0.11-r1.ebuild, musicman-0.14.ebuild, musicman-0.15.ebuild:
+  Make sure that this is compiled with arts enabled. See bug #110725.
 
 *musicman-0.15 (30 Aug 2005)
 
